--- a/res/values/pa_strings.xml
+++ b/res/values/pa_strings.xml
@@ -19,4 +19,8 @@
      <!--PA Version-->
      <string name="pa_version">ParanoidAndroid version</string>
      <string name="pa_version_default">Unknown</string>
+
+    <!-- tap-to-sleep -->
+    <string name="double_tap_to_sleep_title">Double-tap to sleep</string>
+    <string name="double_tap_to_sleep_summary">Double tap status bar or lock screen slider to put the device to sleep</string>
 </resources>
