--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -82,4 +82,10 @@
                 settings:keywords="@string/keywords_display_cast_screen"
                 android:fragment="com.android.settings.wfd.WifiDisplaySettings" />
 
+        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
+                android:key="double_tap_sleep_gesture"
+                android:title="@string/double_tap_to_sleep_title"
+                android:summary="@string/double_tap_to_sleep_summary"
+                android:defaultValue="true" />
+
 </PreferenceScreen>
